@startuml Hardware Store Entity Relationships
' INOVEXAHUB - Système de Gestion Commerciale et Point de Vente (POS)
' Sprint 1: Modélisation UML - Entity Relationships
' Version: 2.0 (ProductBatch, ProductVariant, Delivery Fee)

skinparam linetype ortho

entity "User" as user {
  *id : BIGINT
  --
  first_name : VARCHAR(50)
  last_name : VARCHAR(50)
  email : VARCHAR(100)
  password : VARCHAR
  role : VARCHAR
  enabled : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Client" as client {
  *id : BIGINT
  --
  version : BIGINT
  name : VARCHAR(100)
  phone : VARCHAR(20)
  email : VARCHAR(100)
  address : VARCHAR(255)
  tax_identification_number : VARCHAR(50)
  credit_limit : DECIMAL(19,3)
  current_debt : DECIMAL(19,3)
  deleted : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Supplier" as supplier {
  *id : BIGINT
  --
  name : VARCHAR(100)
  phone : VARCHAR(20)
  email : VARCHAR(100)
  address : VARCHAR(255)
  tax_identification_number : VARCHAR(50)
  contact_person : VARCHAR(100)
  payment_terms : VARCHAR(100)
  notes : VARCHAR(500)
  deleted : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Product" as product {
  *id : BIGINT
  --
  version : BIGINT
  reference : VARCHAR(50)
  name : VARCHAR(100)
  description : VARCHAR(500)
  image : TEXT
  category : VARCHAR(50)
  unit_type : VARCHAR
  base_unit : VARCHAR(20)
  stock_quantity : DECIMAL(19,3)
  average_purchase_price : DECIMAL(19,3)
  unit_price : DECIMAL(19,3)
  supplier_id : BIGINT FK
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "ProductVariant" as product_variant {
  *id : BIGINT
  --
  version : BIGINT
  product_id : BIGINT FK
  sku : VARCHAR(50)
  variant_name : VARCHAR(100)
  attributes : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "ProductConditioning" as conditioning {
  *id : BIGINT
  --
  product_id : BIGINT
  description : VARCHAR(100)
  quantity_per_unit : DECIMAL(19,3)
  unit_price : DECIMAL(19,3)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "ProductBatch" as product_batch {
  *id : BIGINT
  --
  version : BIGINT
  product_id : BIGINT FK
  variant_id : BIGINT FK
  quantity : DECIMAL(19,3)
  unit_cost : DECIMAL(19,3)
  unit_price : DECIMAL(19,3)
  supplier_id : BIGINT FK
  notes : VARCHAR(500)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Document" as document {
  *id : BIGINT
  --
  version : BIGINT
  document_number : VARCHAR(50)
  date : TIMESTAMP
  document_type : VARCHAR
  status : VARCHAR
  client_id : BIGINT
  user_id : BIGINT
  total_excluding_tax : DECIMAL(19,3)
  vat_rate : DECIMAL(5,2)
  total_vat : DECIMAL(19,3)
  total_including_tax : DECIMAL(19,3)
  is_delivery : BOOLEAN
  transport_fee : DECIMAL(19,3)
  stamp_duty : DECIMAL(19,3)
  is_credit_sale : BOOLEAN
  converted_to_invoice_id : BIGINT
  source_delivery_note_id : BIGINT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "DocumentLine" as document_line {
  *id : BIGINT
  --
  document_id : BIGINT
  product_id : BIGINT
  variant_id : BIGINT FK
  line_number : INTEGER
  conditioning_description : VARCHAR(100)
  conditioning_quantity_per_unit : DECIMAL(19,3)
  batch_allocations : TEXT
  quantity : DECIMAL(19,3)
  unit_price : DECIMAL(19,3)
  unit_cost : DECIMAL(19,3)
  total_line_excluding_tax : DECIMAL(19,3)
  total_line_including_tax : DECIMAL(19,3)
  is_delivered : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "PaymentReceipt" as payment_receipt {
  *id : BIGINT
  --
  receipt_number : VARCHAR(50)
  client_id : BIGINT
  user_id : BIGINT
  amount_paid : DECIMAL(19,3)
  payment_date : TIMESTAMP
  payment_method : VARCHAR
  previous_debt : DECIMAL(19,3)
  new_debt : DECIMAL(19,3)
  credit_history_id : BIGINT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "CreditHistory" as credit_history {
  *id : BIGINT
  --
  client_id : BIGINT
  document_id : BIGINT
  payment_receipt_id : BIGINT
  transaction_type : VARCHAR
  amount : DECIMAL(19,3)
  running_balance : DECIMAL(19,3)
  deleted : BOOLEAN
  entry_date : TIMESTAMP
}

entity "AuditLog" as audit_log {
  *id : BIGINT
  --
  user_id : BIGINT /* optional identity snapshot, no FK */
  email : VARCHAR(100)
  action : VARCHAR(100)
  entity_type : VARCHAR(50)
  entity_id : BIGINT
  details : TEXT
  timestamp : TIMESTAMP
}

note right of audit_log
  user_id is an OPTIONAL identity snapshot (nullable, no FK);
  email mirrors the user's email at action time.
  Audit rows may lack a user or outlive a deleted user.
end note

entity "RefreshToken" as refresh_token {
  *id : BIGINT
  --
  token_hash : VARCHAR(64)
  user_id : BIGINT FK
  expires_at : TIMESTAMP
  revoked : BOOLEAN
  created_at : TIMESTAMP
}

entity "AccessToken" as access_token {
  *id : BIGINT
  --
  token_hash : VARCHAR(64)
  user_id : BIGINT FK
  expires_at : TIMESTAMP
  revoked : BOOLEAN
  created_at : TIMESTAMP
}

entity "PasswordResetToken" as password_reset_token {
  *id : BIGINT
  --
  user_id : BIGINT FK
  email : VARCHAR(100)
  otp_code_hash : VARCHAR(100) /* BCrypt hashed */
  expires_at : TIMESTAMP
  used : BOOLEAN
  failed_attempts : INTEGER
  created_at : TIMESTAMP
}

' ============================================
' RELATIONSHIPS
' ============================================

user |o..o{ document : "creates"
user |o..o{ payment_receipt : "registers"
user ||..o{ refresh_token : "has"
user ||..o{ access_token : "has"
user ||..o{ password_reset_token : "has reset tokens"

client |o..o{ document : "has"
client ||..o{ payment_receipt : "makes"
client ||..o{ credit_history : "has"

product ||..o{ conditioning : "has"
product ||..o{ product_variant : "has variants"
product ||..o{ product_batch : "has batches"
product |o..o{ document_line : "appears in"
product }o..o| supplier : "supplied by"

product_variant ||..o{ product_batch : "batches"
product_variant |o..o{ document_line : "appears in"

supplier |o..o{ product_batch : "supplies batches"

document ||..o{ document_line : "contains"
document |o..o{ credit_history : "generates (credit)"

payment_receipt |o--o| credit_history : "generates"

@enduml
